[package]
name = "flappy"
version = "0.1.0"
edition = "2021"
authors = ["Emad info@emaaad.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Tilda character means:
# favor version 0.8.7 but accepts patches from base 0.8
bracket-lib = "~0.8.7"

